--- a/cafecrm/templates/cafecrm/base.html
+++ b/cafecrm/templates/cafecrm/base.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="{% url 'index' %}">Home</a>
                     </li>
 			      		<li class="nav-item active">
-			        		<a class="nav-link" href="products">Products</a>
+			        		<a class="nav-link" href="{% url 'products' %}">Products</a>
 			      		</li>
 
 
