# 5 Add create drink functionality. Refactor url config

--- a/templates/cafecrm/base.html
+++ b/templates/cafecrm/base.html
@@ -15,22 +15,22 @@
 <body>
 	<div class="wrapper">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="{% url 'index' %}"><h2>CAFE</h2></a>
+			<a class="navbar-brand" href="{% url 'cafecrm:index' %}"><h2>CAFE</h2></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  	</button>
 		  	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		  		<ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'index' %}">Home</a>
+                        <a class="nav-link" href="{% url 'cafecrm:index' %}">Home</a>
                     </li>
 			      		<li class="nav-item active">
-			        		<a class="nav-link" href="{% url 'products' %}">Products</a>
+			        		<a class="nav-link" href="{% url 'cafecrm:products' %}">Products</a>
 			      		</li>
 
 
                     <li class="nav-item active">
-			        		<a class="nav-link" href="{% url 'product_add' %}">product_add</a>
+			        		<a class="nav-link" href="{% url 'cafecrm:product_add' %}">product_add</a>
 			      		</li>
                     <li class="nav-item active">
 			        		<a class="nav-link" href="#">#</a>
