# 6 Add slug fields in Product and Drink models Change formset "add new product" to simple form

--- a/templates/cafecrm/base.html
+++ b/templates/cafecrm/base.html
@@ -30,7 +30,7 @@
 
 
                     <li class="nav-item active">
-			        		<a class="nav-link" href="{% url 'cafecrm:product_add' %}">product_add</a>
+			        		<a class="nav-link" href="{% url 'cafecrm:add_simple_product' %}">product_add</a>
 			      		</li>
                     <li class="nav-item active">
 			        		<a class="nav-link" href="#">#</a>
