# 8 Add drinks and drinks detail views

--- a/templates/cafecrm/base.html
+++ b/templates/cafecrm/base.html
@@ -33,7 +33,7 @@
 			        		<a class="nav-link" href="{% url 'cafecrm:add_simple_product' %}">Add new product</a>
 			      		</li>
                     <li class="nav-item active">
-			        		<a class="nav-link" href="#">#</a>
+			        		<a class="nav-link" href="{% url 'cafecrm:drinks' %}">drinks</a>
 			      		</li>
                     <li class="nav-item active">
 			        		<a class="nav-link" href="admin/">Admin panel</a>
