--- a/templates/cafecrm/base.html
+++ b/templates/cafecrm/base.html
@@ -5,6 +5,8 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
@@ -14,7 +16,7 @@
 </head>
 <body>
 	<div class="wrapper">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
 			<a class="navbar-brand" href="{% url 'cafecrm:index' %}"><h2>CAFE</h2></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
@@ -24,33 +26,34 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="{% url 'cafecrm:index' %}">Home</a>
                     </li>
-			      		<li class="nav-item active">
-			        		<a class="nav-link" href="{% url 'cafecrm:products' %}">Products</a>
-			      		</li>
-
-
                     <li class="nav-item active">
-			        		<a class="nav-link" href="{% url 'cafecrm:add_simple_product' %}">Add new product</a>
-			      		</li>
+			        		<a class="nav-link" href="{% url 'cafecrm:stock' %}">Stock</a>
+                    </li>
                     <li class="nav-item active">
-			        		<a class="nav-link" href="{% url 'cafecrm:drinks' %}">drinks</a>
-			      		</li>
+			        		<a class="nav-link" href="{% url 'cafecrm:menu' %}">Menu</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Add new document:
+                      </a>
+                      <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="{% url 'cafecrm:add_simple_product' %}">Add new product</a></li>
+                          <li><a class="dropdown-item" href="{% url 'cafecrm:products' %}">Add new drink</a></li>
+                          <li><a class="dropdown-item" href="{% url 'cafecrm:drinks' %}">Add new selling</a></li>
+                          <li><a class="dropdown-item" href="{% url 'cafecrm:products' %}">Add new stock document</a></li>
+                      </ul>
+                    </li>
                     <li class="nav-item active">
-			        		<a class="nav-link" href="admin/">Admin panel</a>
-			      		</li>
-
+                        <a class="nav-link" href="admin/">Admin panel</a>
+                    </li>
 		  		</ul>
 		  	</div>
 		</nav>
-		<div id="content" class="container">
-
+        <div id="content" class="container">
 			{% block content %}
 
 			{% endblock %}
-
 		</div>
-
-
-	</div>
+    </div>
 </body>
 </html>
