# 13 Add error message if product in stock < item in document for creating stock document function

--- a/templates/sell_temp/sell_detail.html
+++ b/templates/sell_temp/sell_detail.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
     <h1>Your temp document</h1>
-    <table class="cart">
+    <table class="temp_doc">
         <thead>
         <tr>
 
