--- a/templates/cafecrm/create_selling_document.html
+++ b/templates/cafecrm/create_selling_document.html
@@ -44,6 +44,7 @@
             {% endfor %}
         </ul>
         {{ selling.comments }}
+        {{ selling.author }}
     </div>
     {% endif %}
 {% endblock %}
