# 17 Refactor selling document form. Add menu_type in Drink model (for counting products in stock)

--- a/templates/cafecrm/drinks.html
+++ b/templates/cafecrm/drinks.html
@@ -8,19 +8,12 @@
 {% block content %}
 <div class="item">
 
-        {% if drinks %}
-            {% for drink in drinks %}
-                <a href="{{ drink.get_absolute_url }}">{{ drink.drink_name }}</a>
-                <form action="{% url 'sell_temp:sell_add' drink.id %}" method="post">
-                {{ sell_drink_form }}
-                {% csrf_token %}
-                <input type="submit" value="Add to document">
-            </form>
-            <hr>
-            {% endfor %}
-        {% else %}
-            There are no drinks in menu.
-        {% endif %}
+<form action="{% url 'sell_temp:sell_add' %}" method="post">
+    {{ sell_drink_form }}
+    {% csrf_token %}
+    <input type="submit" value="Add to document">
+</form>
+
 </div>
 
 {% endblock %}
