# 17 Counting products in stock during creating selling document

--- a/templates/cafecrm/create_selling_document.html
+++ b/templates/cafecrm/create_selling_document.html
@@ -8,29 +8,38 @@
 {% block content %}
 
     {% if not sent %}
-         <h4>New sell document</h4>
-        <!--form-->
-        <form action="" method="post" class="order-form">
-            {{ form.as_p }}
+            {% if message %}
+                {{ product }} {{ message }}.
+                <br>
+                 In document {{ quantity }}, but in sock {{ stock }}
+                <br>
+                <a href="{% url 'sell_temp:sell_detail' %}" class="button light">Change products quantity</a>
+            {% else %}
 
-            <!--items-->
-    <div class="order-info">
-        <ul>
-            {% for item in sell %}
-                <li>
-                    {{ item.drink.drink_name }} -
-                    {{ item.quantity }}
-                </li>
-            {% endfor %}
-        </ul>
-    <a href="{% url 'cafecrm:drinks' %}" class="button light">Add new drink in </a>
-    <br>
-    <a href="{% url 'sell_temp:sell_detail' %}" class="button light">Change drinks quantity</a>
-    </div>
-                    <p><input type="submit" value="Add "></p>
-            {% csrf_token %}
-        </form>
-    {% else %}
+                <h4>New sell document</h4>
+                <!--form-->
+                <form action="" method="post" class="order-form">
+                    {{ form.as_p }}
+
+                    <!--items-->
+                    <div class="order-info">
+                    <ul>
+                        {% for item in sell %}
+                            <li>
+                                {{ item.drink.drink_name }} -
+                                {{ item.quantity }}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                    <a href="{% url 'cafecrm:drinks' %}" class="button light">Add new drink in </a>
+                    <br>
+                    <a href="{% url 'sell_temp:sell_detail' %}" class="button light">Change drinks quantity</a>
+                    </div>
+                                <p><input type="submit" value="Add "></p>
+                        {% csrf_token %}
+                    </form>
+                {% endif %}
+        {% else %}
     <!--success-->
          <h4>sell document -  # {{ selling.id }} was applied at {{ selling.date }}</h4>
     <!--ingredients-->
