--- a/templates/sell_temp/sell_detail.html
+++ b/templates/sell_temp/sell_detail.html
@@ -18,16 +18,16 @@
         </thead>
         <tbody>
         {% for item in sell %}
-            {% with menu=item.menu %}
+            {% with drink=item.drink %}
                 <tr>
-                    <td> {{ menu.menu_name }}</td>
-                    <td> <form action="{% url 'sell_temp:sell_add' menu.id %}" method="post">
+                    <td> {{ drink.drink_name }}</td>
+                    <td> <form action="{% url 'sell_temp:sell_add' drink.id %}" method="post">
                 {{ item.update_quantity_form.quantity }}
                 {{ item.update_quantity_form.update }}
                 <input type="submit" value="Обновить">
                 {% csrf_token %}
               </form></td>
-                    <td><a href="{% url "sell_temp:sell_remove" menu.id %}">Remove</a></td>
+                    <td><a href="{% url "sell_temp:sell_remove" drink.id %}">Remove</a></td>
                     <td class="num">{{ item.quantity }}</td>
                 </tr>
             {% endwith %}
